--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
     <meta name="author" content="CoreUI">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>Geriatrico - Pagina Oficial</title>
+    <title>Liceo Libertador - Sistema de Administrativo Estudiantil</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="/favicon.ico">
   </head>
