avance de servicio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
     <title>Sistema de Gestion</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="/logodesastres.jpg">
+    <link rel="shortcut icon" href="src/assets/images/purologo.png">
   </head>
   <body>
     <noscript>
