--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="description" content="CoreUI for React - Open Source Bootstrap Admin Template">
     <meta name="author" content="CoreUI">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>Sistema de Gestion</title>
+    <title>MatemaAventura 6°</title>
     <link rel="manifest" href="/manifest.json">
-    <link rel="shortcut icon" href="src/assets/images/purologo.png">
+    <link rel="shortcut icon" href="src/assets/images/educativo.png">
   </head>
   <body>
     <noscript>
